fixed padding for title on mobile

--- a/Input/Input.module.less
+++ b/Input/Input.module.less
@@ -94,6 +94,10 @@
 
 		.body {
 			padding: @sand-input-fullscreen-padding;
+
+			&.mobile {
+				padding: @sand-input-fullscreen-padding-mobile;
+			}
 		}
 
 		.title {
